# rust-server-panel

./: .gitignore  Dockerfile  docker-compose.yml
backend/: Cargo.toml  config.example.yaml
backend/src/: auth.rs  config.rs  filemanager.rs  lgsm.rs  logs.rs  main.rs  map.rs  monitor.rs  persistence.rs  players.rs  plugins.rs  provisioner.rs  rcon.rs  registry.rs  scheduler.rs  servers.rs  websocket.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: vite-env.d.ts
frontend/src/components/: CreateServerDialog.vue  ServerCard.vue
frontend/src/composables/: usePolling.ts  useWebSocket.ts
frontend/src/layouts/: HomeLayout.vue  MainLayout.vue  ServerLayout.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  server.ts
frontend/src/types/: index.ts
frontend/src/views/: ConfigPage.vue  ConsolePage.vue  DashboardPage.vue  FilesPage.vue  HomePage.vue  LoginPage.vue  LogsPage.vue  MapPage.vue  PlayersPage.vue  PluginsPage.vue  SchedulePage.vue
