[package]
name = "rust-server-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-ws = "0.3"
actix-files = "0.6"
actix-cors = "0.7"
actix-multipart = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"

# System monitoring
sysinfo = "0.33"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
thiserror = "2"

# File operations
walkdir = "2"
mime_guess = "2"

# HTTP client (for uMod API)
reqwest = { version = "0.12", features = ["json"] }

# Byte handling for multipart
bytes = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
